--- a/index.html
+++ b/index.html
@@ -35,50 +35,63 @@
 
   <link rel="stylesheet" href="styles.css" />
   <script>
-    // Jump to About on first load (no hash)
+    // Helpers available after DOM is ready
     window.addEventListener('DOMContentLoaded', function () {
+      // Jump to About on first load if no hash
       if (!location.hash) {
         const about = document.getElementById('about');
         if (about) about.scrollIntoView({ behavior: 'auto', block: 'start' });
       }
 
-      // Mobile dropdown menu
-      const btn = document.getElementById('mobile-menu-btn');
+      // Mobile dropdown menu behavior
+      const btn   = document.getElementById('mobile-menu-btn');
       const panel = document.getElementById('mobile-menu-panel');
-      const nav = document.getElementById('primary-nav');
 
+      function openPanel() {
+        panel.classList.add('open');
+        btn.setAttribute('aria-expanded', 'true');
+        const first = panel.querySelector('a');
+        if (first) first.focus();
+      }
       function closePanel() {
         panel.classList.remove('open');
         btn.setAttribute('aria-expanded', 'false');
       }
+      function togglePanel(e) {
+        e.stopPropagation();
+        if (panel.classList.contains('open')) {
+          closePanel();
+        } else {
+          openPanel();
+        }
+      }
 
       if (btn && panel) {
-        btn.addEventListener('click', (e) => {
-          e.stopPropagation();
-          const willOpen = !panel.classList.contains('open');
-          panel.classList.toggle('open', willOpen);
-          btn.setAttribute('aria-expanded', String(willOpen));
-          if (willOpen) {
-            const first = panel.querySelector('a');
-            if (first) first.focus();
+        btn.addEventListener('click', togglePanel);
+
+        // Close when a link is clicked, after allowing hash navigation to occur
+        panel.addEventListener('click', (e) => {
+          const t = e.target;
+          if (t && t.tagName === 'A') {
+            // Let the anchor change the hash, then close
+            setTimeout(closePanel, 0);
           }
         });
 
-        // Close when clicking a link
-        panel.addEventListener('click', (e) => {
-          const target = e.target;
-          if (target && target.tagName === 'A') closePanel();
-        });
-
-        // Click outside to close
+        // Close on outside click
         document.addEventListener('click', (e) => {
-          if (!panel.contains(e.target) && e.target !== btn) closePanel();
+          if (panel.classList.contains('open') && !panel.contains(e.target) && e.target !== btn) {
+            closePanel();
+          }
         });
 
-        // ESC to close
+        // Close on ESC
         document.addEventListener('keydown', (e) => {
           if (e.key === 'Escape' && panel.classList.contains('open')) closePanel();
         });
+
+        // Close when the hash changes (e.g., anchor navigation)
+        window.addEventListener('hashchange', closePanel);
       }
     });
   </script>
@@ -87,7 +100,7 @@
 <body>
   <!-- SIDEBAR (desktop) + MOBILE HEADER (top) -->
   <aside class="sidebar" role="navigation" aria-label="Primary">
-    <!-- Mobile top bar with small Menu box -->
+    <!-- Mobile top bar with small Menu box (visible on mobile only) -->
     <div class="mobile-bar">
       <button id="mobile-menu-btn"
               class="mobile-menu"
@@ -96,7 +109,8 @@
               aria-label="Open navigation">
         Menu ▾
       </button>
-      <div id="mobile-menu-panel" class="mobile-menu-panel" role="menu">
+      <!-- Dropdown panel with links (mobile only) -->
+      <div id="mobile-menu-panel" class="mobile-menu-panel" role="menu" aria-label="Mobile navigation menu">
         <a href="#about" role="menuitem">About</a>
         <a href="#expertise" role="menuitem">Teaching Expertise</a>
         <a href="#teaching" role="menuitem">Teaching Experience</a>
@@ -113,7 +127,7 @@
     </div>
 
     <!-- Desktop vertical nav -->
-    <nav id="primary-nav" class="nav">
+    <nav id="primary-nav" class="nav" aria-label="Primary navigation links">
       <a href="#about">About</a>
       <a href="#expertise">Teaching Expertise</a>
       <a href="#teaching">Teaching Experience</a>
@@ -164,7 +178,7 @@
         </p>
       </section>
 
-      <!-- (Keep your other sections unchanged) -->
+      <!-- EXPERTISE -->
       <section id="expertise" class="section">
         <h2 class="section-title">Teaching Expertise — Graduate &amp; Undergraduate</h2>
         <ul class="cols">
@@ -183,7 +197,158 @@
         </ul>
       </section>
 
-      <!-- ...teaching, education, research, projects, workshops, certs, awards, service, publications, contact... -->
+      <!-- TEACHING -->
+      <section id="teaching" class="section">
+        <h2 class="section-title">Teaching Experience</h2>
+        <ul>
+          <li>Designed and delivered courses in Networks, Cloud Computing, Machine Learning, Data Analytics, Programming, Data Structures &amp; Algorithms, and Discrete Mathematics with interactive lectures and hands-on exercises.</li>
+          <li>Built practical lab experiences to strengthen experiential learning and skill application.</li>
+          <li>Developed slides, assignments, homework, and tutorials for theory-focused courses.</li>
+        </ul>
+      </section>
+
+      <!-- EDUCATION -->
+      <section id="education" class="section">
+        <h2 class="section-title">Education</h2>
+        <ul>
+          <li>
+            <strong>Ph.D., Computer Science</strong> — McMaster University, Hamilton, ON (June 2024)<br>
+            Supervisors: Dr. Ryszard Janicki, Dr. Wenbo He<br>
+            Focus: Federated Machine Learning — Optimization &amp; Security Enhancement<br>
+            Highlight: Reduced communication overhead between edge devices and servers.
+          </li>
+          <li>
+            <strong>MSc, Computer Information Systems</strong> — Athabasca University, Calgary, AB (Aug 2018)<br>
+            Supervisors: Dr. Mahmoud Abaza, Dr. Qing Tan<br>
+            Focus: Cloud Load Balancing and Quality of Service in Networking.
+          </li>
+          <li>
+            <strong>BSc, Computer Science &amp; Mathematics</strong> — Carleton University, Ottawa, ON (May 2013)
+          </li>
+        </ul>
+      </section>
+
+      <!-- RESEARCH -->
+      <section id="research" class="section">
+        <h2 class="section-title">Research Experience</h2>
+        <h3>Ph.D. Studies</h3>
+        <ul>
+          <li>Researched Federated Learning with emphasis on optimization and security.</li>
+          <li>Reduced communication overhead across edge–server pathways.</li>
+          <li>Integrated Indigenous pedagogies into STEM outreach for K–12 mathematics and computing.</li>
+          <li>Designed modular, scalable object-oriented software architectures for enterprise systems.</li>
+          <li>Optimized database design and data structures for large-scale information systems.</li>
+        </ul>
+
+        <h3>Master’s Studies</h3>
+        <ul>
+          <li>Investigated cloud load balancing and Quality of Service in networking environments.</li>
+          <li>Built simulations for cloud resource management and performance analysis.</li>
+        </ul>
+
+        <h3>Focus Areas</h3>
+        <ul>
+          <li><strong>Machine Learning:</strong> Distributed ML, Federated Learning, Health Informatics.</li>
+          <li><strong>Cloud &amp; Networking:</strong> Cloud Security, Load Balancing, IoT Networking, Data Center Networking, QoS.</li>
+        </ul>
+      </section>
+
+      <!-- PROJECTS -->
+      <section id="projects" class="section">
+        <h2 class="section-title">Projects</h2>
+        <h3>Ph.D. Research Projects</h3>
+        <ul>
+          <li><strong>Federated Machine Learning:</strong> Optimization &amp; security enhancements; bandwidth-aware aggregation; improved resource utilization and latency.</li>
+          <li><strong>Object-Oriented Architectures:</strong> Modular, scalable designs using proven patterns to support enterprise applications.</li>
+          <li><strong>Database Design &amp; Data Structures:</strong> Performance-tuned schemas and data access strategies for large information systems.</li>
+          <li><strong>Network Simulations:</strong> Modeled complex topologies with <em>GNS3</em>, <em>ns-3</em>, and <em>Cisco Packet Tracer</em>; used <em>MATLAB/Simulink</em> for control systems; created virtual environments with <em>VirtualBox</em> and <em>VMM</em>.</li>
+        </ul>
+
+        <h3>Master’s Research Projects</h3>
+        <ul>
+          <li><strong>Cloud Load Balancing &amp; QoS:</strong> Evaluated methods to improve performance and reliability.</li>
+          <li><strong>Cloud Resource Simulations:</strong> Built models with <em>CloudSim</em>, <em>iFogSim</em>, and <em>SimGrid</em> to assess utilization and throughput under varied workloads.</li>
+        </ul>
+      </section>
+
+      <!-- WORKSHOPS -->
+      <section id="workshops" class="section">
+        <h2 class="section-title">Workshops &amp; Seminars</h2>
+        <ul>
+          <li><strong>Huawei Workshop</strong> — Toronto, Canada (Apr 2023): Program Verification, PL Implementation, Concurrent Data Structures.</li>
+          <li><strong>IBM Canada</strong> — Toronto, ON (Mar 2023): Software Engineering Best Practices &amp; Innovations.</li>
+          <li><strong>Axia Engineering</strong> — Mississauga, ON (Feb 2023): Engineering Consultancy &amp; Software Development.</li>
+          <li><strong>Arrayus Technologies Inc</strong> — Ottawa, ON (Jan 2023): Innovation for Technology Solutions &amp; Strategy.</li>
+          <li><strong>CrowdStrike</strong> — Kitchener, ON (Dec 2022): Cybersecurity Trends &amp; SE Methodologies.</li>
+          <li><strong>CVI &amp; HMI Innovation</strong> — Hamilton, ON (Nov 2022): Human-Machine Interface &amp; Computer Vision.</li>
+        </ul>
+      </section>
+
+      <!-- CERTS -->
+      <section id="certs" class="section">
+        <h2 class="section-title">Certifications</h2>
+        <ul>
+          <li><strong>Teaching &amp; Learning Certificate</strong>, MacPherson Institute (McMaster University)</li>
+        </ul>
+        <p><em>Courses completed:</em> EDUCATION 740 (Peer-Evaluated Teaching Experience); EDUCATION 760 (Self-Directed Study); EDUCATION 780 (Self-Directed Teaching Experience).</p>
+        <ul>
+          <li>Microsoft Certified: Azure Fundamentals (AZ-900)</li>
+          <li>Microsoft Certified: Azure Data Fundamentals (DP-900)</li>
+          <li>CompTIA A+ — Remote Support Technician</li>
+        </ul>
+      </section>
+
+      <!-- AWARDS -->
+      <section id="awards" class="section">
+        <h2 class="section-title">Grants, Awards, and Honors</h2>
+        <ul>
+          <li><strong>Distinguished Teaching Assistant Award</strong> — McMaster University (Fall 2019 &amp; Winter 2020)</li>
+          <li><strong>Research Excellence Award</strong> — Federated Learning &amp; Health Informatics (2023)</li>
+          <li><strong>Graduate Research Grant</strong> — Optimization in Federated Learning frameworks (2022)</li>
+          <li><strong>Best Paper Award</strong> — KES 2023 (Data Security in Federated Learning)</li>
+        </ul>
+      </section>
+
+      <!-- SERVICE -->
+      <section id="service" class="section">
+        <h2 class="section-title">Service to the Academic Community</h2>
+        <h3>Coffee Hour for Students</h3>
+        <ul>
+          <li>Planned and managed graduate CS community events; coordinated logistics and engagement.</li>
+        </ul>
+        <h3>Capstone Project Mentor (Mechatronics &amp; Computer Science)</h3>
+        <ul>
+          <li>Guided student presentations, provided structured feedback, and supported faculty coordination.</li>
+        </ul>
+      </section>
+
+      <!-- PUBLICATIONS -->
+      <section id="publications" class="section">
+        <h2 class="section-title">Publications</h2>
+        <h3>Submitted / Under Review</h3>
+        <ul>
+          <li><strong>Q1 (Submitted):</strong> <em>Proof-Before-Train Federated Learning—ECC-Backed Zero-Leak Commitments and Trust-Aware Aggregation under Bandwidth Constraints</em>, submitted to <em>Computers &amp; Security</em> (Elsevier, Q1).</li>
+          <li><strong>Q2 (Under review):</strong> <em>A Predictive Approach to Workload Balancing in Cloud Computing Using Pairwise Comparison</em>, submitted to the <em>Journal of Cloud Computing</em> (Q2).</li>
+        </ul>
+        <h3>Published Papers</h3>
+        <ol>
+          <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Text Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em> IJCRS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-50959-9_42" target="_blank" rel="noopener">SpringerLink</a>.</li>
+          <li>Jodayree, M., He, W., &amp; Janicki, R. (2023). <em>Preventing Image Data Poisoning Attacks in Federated Machine Learning by an Encrypted Verification Key.</em> KES 2023. <a href="https://doi.org/10.1016/j.procs.2023.10.264" target="_blank" rel="noopener">DOI</a>.</li>
+          <li>Jodayree, M., &amp; Janicki, R. (2020). <em>A predictive resources management for clouds.</em> In FLINS 2020, 421–428. <a href="https://doi.org/10.1142/9789811223334_0051" target="_blank" rel="noopener">DOI</a>.</li>
+          <li>Jodayree, M., Abaza, M., &amp; Tan, Q. (2019). <em>A predictive workload balancing algorithm in cloud services.</em> <em>Procedia Computer Science</em>, 159, 902–912. <a href="https://doi.org/10.1016/j.procs.2019.09.250" target="_blank" rel="noopener">DOI</a>.</li>
+        </ol>
+      </section>
+
+      <!-- CONTACT -->
+      <section id="contact" class="section">
+        <h2 class="section-title">Contact</h2>
+        <p>
+          Connect with me on
+          <a href="https://www.linkedin.com/in/mahdeej/" rel="me" target="_blank">LinkedIn</a>,
+          or explore my work on
+          <a href="https://github.com/mahdijaf" rel="me" target="_blank">GitHub</a>.
+        </p>
+      </section>
     </main>
   </div>
 </body>
